--- a/mPayTradeCore-service/.settings/org.eclipse.wst.common.component
+++ b/mPayTradeCore-service/.settings/org.eclipse.wst.common.component
@@ -1,6 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
     <wb-module deploy-name="mPayTradeCore-service">
-        <wb-resource deploy-path="/" source-path="/src/main/java"/>
-        <wb-resource deploy-path="/" source-path="/src/main/resources"/>
+        <wb-resource deploy-path="/" source-path="/target/m2e-wtp/web-resources"/>
+        <wb-resource deploy-path="/" source-path="/src/main/webapp" tag="defaultRootSource"/>
+        <dependent-module archiveName="TradePaySDK-20160711.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/TradePaySDK/TradePaySDK">
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
+        <property name="context-root" value="mPayTradeCore-service"/>
+        <property name="java-output-path" value="/mPayTradeCore-service/target/classes"/>
     </wb-module>
 </project-modules>
