--- a/mPayTradeCore-service/.settings/org.eclipse.wst.common.component
+++ b/mPayTradeCore-service/.settings/org.eclipse.wst.common.component
@@ -2,6 +2,7 @@
     <wb-module deploy-name="mPayTradeCore-service">
         <wb-resource deploy-path="/" source-path="/target/m2e-wtp/web-resources"/>
         <wb-resource deploy-path="/" source-path="/src/main/webapp" tag="defaultRootSource"/>
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources"/>
         <dependent-module archiveName="TradePaySDK-20160713.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/TradePaySDK/TradePaySDK">
             <dependency-type>uses</dependency-type>
         </dependent-module>
